2003-04-24  Ray Tomlinson  <RTomlinson@bbn.com>

	* SimpleAgent.java: 
	Bug #2838 -- Persistence lacks per-agent configurability
	Pass all parameters PersistenceServiceComponent in case they
	pertain thereto.

2003-04-07  Ray Tomlinson  <RTomlinson@bbn.com>

	* SimpleAgent.java:
	Bug #2743 -- Dots and other characters printed to System.err/out
	interfere with logging
	Use Logging.printDot instead of System.out.print showProgress.

2003-03-21  Ray Tomlinson  <RTomlinson@bbn.com>

	* SimpleAgent.java:
	Bug #2699 -- Time advance messages arrive before NaturalTimeService obtained
	Move the MTS registration after other services are obtained.
	

2003-03-17  Ray Tomlinson  <RTomlinson@bbn.com>

	* SimpleAgent.java: 
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Give myBlackboardService protected state so it can be used by
	subclasses (e.g. NodeAgent).

	* AgentManager.java: 
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Add getComponents() method to retrieve a list of components
	installed in this container.

	* AgentContainer.java: 
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Add Collection methods so components other than agents can be
	added/removed using this interface.

2003-03-14  Ray Tomlinson  <RTomlinson@bbn.com>

	* SimpleAgent.java:
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Open up handling of persistence data to subclasses (NodeAgent).
	Add getPersistenceClient method so subclasses can override and
	substitute their own client.

2003-03-13  Ray Tomlinson  <RTomlinson@bbn.com>

	* SimpleAgent.java:
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Save agent component hierarchy in persistence snapshots.

2003-03-12  Ray Tomlinson  <RTomlinson@bbn.com>

	* service/event/EventServiceComponent.java: 
	Bug #2658 -- Components incompatible with automatic service revocation feature
	Test for null service before trying to use it.
